--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.AvalonDock/Properties/Resources.es.resx
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.AvalonDock/Properties/Resources.es.resx
@@ -124,7 +124,7 @@
     <value>Esconder Automáticamente</value>
   </data>
   <data name="Anchorable_BtnClose_Hint" xml:space="preserve">
-    <value>Esconder</value>
+    <value>Ocultar todo</value>
   </data>
   <data name="Anchorable_CxMenu_Hint" xml:space="preserve">
     <value>Posición de Ventana </value>
