--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.AvalonDock/Properties/Resources.pt-BR.resx
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.AvalonDock/Properties/Resources.pt-BR.resx
@@ -124,7 +124,7 @@
     <value>Esconder Automaticamente</value>
   </data>
   <data name="Anchorable_BtnClose_Hint" xml:space="preserve">
-    <value>Esconder</value>
+    <value>Esconda tudo</value>
   </data>
   <data name="Anchorable_CxMenu_Hint" xml:space="preserve">
     <value>Posição da Janela</value>
