--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.AvalonDock/Properties/Resources.resx
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.AvalonDock/Properties/Resources.resx
@@ -124,7 +124,7 @@
     <value>Auto Hide</value>
   </data>
   <data name="Anchorable_BtnClose_Hint" xml:space="preserve">
-    <value>Hide</value>
+    <value>Hide All</value>
   </data>
   <data name="Anchorable_CxMenu_Hint" xml:space="preserve">
     <value>Window Position</value>
