--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.AvalonDock/Properties/Resources.sv.resx
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.AvalonDock/Properties/Resources.sv.resx
@@ -124,7 +124,7 @@
     <value>Dölj automatiskt</value>
   </data>
   <data name="Anchorable_BtnClose_Hint" xml:space="preserve">
-    <value>Dölj</value>
+    <value>Göm alla</value>
   </data>
   <data name="Anchorable_CxMenu_Hint" xml:space="preserve">
     <value>Fönsterposition</value>
