--- a/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.AvalonDock/Properties/Resources.zh-Hans.resx
+++ b/ExtendedWPFToolkitSolution/Src/Xceed.Wpf.AvalonDock/Properties/Resources.zh-Hans.resx
@@ -124,7 +124,7 @@
     <value>自动隐藏</value>
   </data>
   <data name="Anchorable_BtnClose_Hint" xml:space="preserve">
-    <value>隐藏</value>
+    <value>全部藏起来</value>
   </data>
   <data name="Anchorable_CxMenu_Hint" xml:space="preserve">
     <value>窗口位置</value>
